<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="80dp"
    android:layout_marginRight="80dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/on" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/Visible" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/List" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/off" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/padding"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bordershape"
            android:layout_weight="1">
            <spring15.ec551.fpgacontroller.resources.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/vehicle_title_text_size"
                android:text="@string/paired_devices"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/flat_white"
                android:layout_marginBottom="@dimen/padding"/>

            <ListView
                android:id="@+id/paired_devices"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bordershape"
            android:layout_weight="1">
            <spring15.ec551.fpgacontroller.resources.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/vehicle_title_text_size"
                android:text="@string/connected_devices"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/flat_white"
                android:layout_marginBottom="@dimen/padding"/>

            <ListView
                android:id="@+id/connected_devices"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

        </LinearLayout>


    </LinearLayout>



</LinearLayout>